2014-07-19  Julien Bect  <julien.bect@supelec.fr>

	New example script illustrating random Pareto fronts.

	* examples/03_miscellaneous/stk_example_misc04.m: New script.

2014-07-18  Julien Bect  <julien.bect@supelec.fr>

	Add an option to control the verbosity fmincon/fminsearch.

	* misc/options/stk_options_set.m: Add new option
	'optim_display_level' with default value 'off'.
	* paramestim/stk_param_estim.m: Use the new option.
	* paramestim/stk_param_init.m: Don't display debugging info.

2014-07-14  Julien Bect  <julien.bect@supelec.fr>

	stk_plot1d.m: Improved flexibility in argument handling.

	* misc/plot/stk_plot1d.m: Improved flexibility in the way input
	arguments are handled.

2014-07-03  Julien Bect  <julien.bect@supelec.fr>

	Global options to control upper/lower bounds for param estim.

	* misc/options/stk_options_set.m: Add new options.
	* paramestim/stk_param_getdefaultbounds.m: Read global options.

	stk_param_estim.m: Return an additional 'info' structure.

	* paramestim/stk_param_estim.m: Return an additional 'info'
	structure, which currently contains the criterion that has been
	used, the criterion value at the optimum, and the bounds.

2014-07-02  Julien Bect  <julien.bect@supelec.fr>

	stk_generate_samplepaths.m: Use model.response_name if available.

	* utils/stk_generate_samplepaths.m: Use model.response_name if
	available.

2014-07-01  Julien Bect  <julien.bect@supelec.fr>

	stk_isdominated.m: New function, returns true for dominated rows.

	* arrays/generic/stk_isdominated.m: New function
	* arrays/generic/private/stk_isdominated_mex.c: New MEX-function
	* misc/include/pareto.h: Add new function is_dominated
	* config/stk_config_makeinfo.m: Compile the new MEX-function
	* admin/octave-pkg/Makefile: Compile the new MEX-function
	* arrays/generic/private/stk_paretofind_mex.c: Modified
	* arrays/generic/stk_paretofind.m: Modified

	stk_figure.m: Do not set the axis title.

	* misc/plot/stk_figure.m: Do not set the axis title.
